# xstudio

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CODE_REVIEW_CLAUDE.md  COMMITTERS.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  NOTICE.TXT  README.md  SECURITY.md  build.bat  build.sh  run.sh  run2.sh  vcpkg.json  xStudioConfig.cmake.in
bench/exr_benchmark/: CMakeLists.txt  exr_benchmark.cpp
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  conf.py  conf.py.in  index.rst  make.bat  requirements.txt
docs/_static/: building-timeline-01.webm  media-list-config-01.webm  ui-customise.webm  xstudio_theme.css
docs/_templates/: layout.html
docs/api/: index.rst  utility.rst
docs/build_guides/: build_rocky_linux_9_5.sh  centos_7.md  downloading_qt.md  linux_generic.md  macos.md  rocky_linux_9_1.md  ubuntu_22_04.md  windows.md
docs/python_api/: cli.rst  common.rst  core.rst  demo.rst  index.rst  root.rst  sync.rst
docs/reference/: index.rst
docs/reference/api/: index.rst  overview.rst  plugin.rst  utility.rst
docs/reference/build_guides/: centos_7.md  dependencies.rst  downloading_qt.md  index.rst  linux_generic.md  macos.md  windows.md
docs/reference/python_api/: api.rst  connection.rst  core.rst  index.rst  overview.rst
docs/user_docs/: .project  conf.py  index.rst  notes.rst  overview.rst
docs/user_docs/_static/: xstudio_theme.css
docs/user_docs/appendix/: colour_management.rst  index.rst  preference_files.rst  python_plugins.rst  python_scripting.rst
docs/user_docs/getting_started/: getting_started.rst
docs/user_docs/interface/: file_system_browser.rst  interface.rst  layouts.rst  playlists.rst  timeline.rst  transport.rst
docs/user_docs/release_notes/: index.rst
docs/user_docs/workflow/: notes.rst  playback.rst  quick_view.rst  sdi_output.rst  video_output.rst  workflow.rst
python/: CMakeLists.txt  setup.py.in
python/src/: xstudio-control  xstudio-control.cmd  xstudio-inject  xstudio-inject.cmd  xstudiopy  xstudiopy.cmd
python/src/xstudio/: __init__.py  version.py.in
python/test/: CMakeLists.txt  conftest.py  test_api.py  test_global_store.py  test_media.py  test_media_cache.py  test_media_source.py  test_media_stream.py  test_playhead.py  test_playlist.py  test_session.py
scripts/qt_install/: CMakeLists.txt  qt_install.cmake.in
share/docs/: .buildinfo  CMakeLists.txt  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
share/docs/.doctrees/: environment.pickle  index.doctree
share/docs/_modules/: index.html
share/docs/_sources/: index.rst.txt
share/docs/_static/: annotations-01.webm  drag-drop1.webm  grading-01.webm  quick-view-01.webm  xstudio_theme.css
share/docs/api/: atoms.html  enums.html  index.html  utility.html
share/docs/python_api/: api.html  cli.html  common.html  connection.html  core.html  demo.html  index.html  root.html  sync.html
share/docs/reference/: index.html
share/docs/user_docs/: index.html  notes.html  overview.html  playback.html  preferences.html
share/fonts/: CMakeLists.txt
share/preference/: CMakeLists.txt  core_api.json  core_audio.json  core_bookmark.json  core_cache.json  core_colour_cache.json  core_colour_pipeline.json  core_conform.json  core_global_store.json  core_media_hook.json  core_media_metadata.json  core_media_reader.json  core_playhead.json  core_plugin_manager.json  core_python.json  core_scanner.json  core_sequence.json  core_session.json  core_snapshot.json  core_sync.json  core_thumbnail.json  plugin_annotations.json  plugin_basic_masking.json  plugin_colour_pipeline_ocio.json  plugin_data_source_shotbrowser.json  plugin_data_source_shotgun.json  plugin_dneg_media_hook.json  plugin_exr_data_window.json  plugin_grading.json  plugin_image_boundary_hud.json  plugin_media_metadata_ffprobe.json  plugin_media_metadata_openexr.json  plugin_media_metadata_openimageio.json  plugin_media_reader_ffmpeg.json  plugin_media_reader_openexr.json  plugin_media_reader_openimageio.json  plugin_media_reader_pdf.json  plugin_media_reader_ppm.json  plugin_pixel_probe.json  plugin_utility_disable_screensaver.json  (+4 more)
share/snippets/: CMakeLists.txt  demo.json
share/snippets/DNeg/: Print_Client_Version_Names.py  export_flagged_clip_shots.py  remove_duplicate_sg_versions.py
share/snippets/Demo/: capitalise_playlists.py  clear_sequence_colour.py  clear_thumbnails.py  demo_mask_plugin.py  dump_shots.py  flag_clip_step.py  hello_world.py  list_offline_media.py  print_status.py  render_all_annotation.py  sort_playlists.py
src/: CMakeLists.txt
src/audio/src/: CMakeLists.txt  audio_output.cpp  audio_output_actor.cpp  linux_audio_output_device.cpp  linux_audio_output_device.hpp  macos_audio_output_device.cpp  windows_audio_output_device.cpp  windows_audio_output_device.hpp  windows_spatial_audio_output_device.cpp
src/audio/test/: CMakeLists.txt  audio_test.cpp
src/bookmark/src/: CMakeLists.txt  bookmark.cpp  bookmark_actor.cpp  bookmarks_actor.cpp
src/bookmark/test/: CMakeLists.txt  bookmark_actor_test.cpp  bookmark_test.cpp
src/broadcast/src/: CMakeLists.txt  broadcast_actor.cpp
src/broadcast/test/: CMakeLists.txt  broadcast_actor_test.cpp
src/caf_utility/src/: CMakeLists.txt  caf_setup.cpp
src/caf_utility/test/: CMakeLists.txt
src/colour_pipeline/src/: CMakeLists.txt  colour_cache_actor.cpp  colour_operation.cpp  colour_pipeline.cpp  colour_pipeline_actor.cpp
src/conform/src/: CMakeLists.txt  conform_manager_actor.cpp  conformer.cpp
src/conform/test/: CMakeLists.txt
src/contact_sheet/src/: CMakeLists.txt  contact_sheet.cpp  contact_sheet_actor.cpp
src/contact_sheet/test/: CMakeLists.txt  contact_sheet_actor_test.cpp  contact_sheet_test.cpp
src/data_source/src/: CMakeLists.txt  data_source.cpp
src/data_source/test/: CMakeLists.txt
src/demos/glx_minimal_demo/: CMakeLists.txt
src/demos/py_remote_ui_demo/: CMakeLists.txt
src/embedded_python/src/: CMakeLists.txt  (+3 more)
src/ui/: CMakeLists.txt
(+2455 files in other folders)
